fix overflow bug

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,6 +33,7 @@ body {
   color: #63dcf8; */
   background-color: #0e1010;
   color: #9feedc;
+  overflow: hidden;
 }
 
 a {
